--- a/smetro/views/user/userlogin.ejs
+++ b/smetro/views/user/userlogin.ejs
@@ -38,60 +38,61 @@
 <% } %>
 
     
-    <div>
-      <section class="vh-100" style="background-color: #20315e; margin-top: -50px;">
-        <%-include('../partials/nav') %>
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-10">
-              <div class="card" style="border-radius: 1rem;">
-                <div class="row g-0">
-                  <div class="col-md-6 col-lg-5 d-none d-md-block">
-                    <img src="../img/metro2.jpg" alt="login form" class="img-fluid fit-section-image"
-                      style="border-radius: 1rem 0 0 1rem;" />
-                  </div>
-                  <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                    <div class="card-body p-4 p-lg-5 text-black">
-      
-                      <!-- Rest of the form code -->
-                      <form action="/user/userlogin" method="post">
-      
-                        <div class="d-flex align-items-center mb-3 pb-1">
-                          <i class="fas fa-train fa-2x me-3" style="color: #ff6219;"></i>
-                          <span class="h1 fw-bold mb-0">SMetro</span>
-                          
-                        </div>
-      
-                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
-      
-                        <div class="form-outline mb-4">
-                          <input type="text" class="form-control form-control-lg" maxlength="50" id="email" name="email"
-                          aria-describedby="emailHelp" required/>
-                          <label class="form-label" for="email">Email address</label>
-                        </div>
-      
-                        <div class="form-outline mb-4">
-                        <input type="password" maxlength="23" class="form-control form-control-lg"  id="password" name="password" required>
-                          <label class="form-label" for="password">Password</label>
-                        </div>
-      
-                        <div class="pt-1 mb-4">
-                          <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
-                        </div>
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/user/usersignup"
-                            style="color: #393f81;">Register here</a></p>
-                      </form>
-                      <p class="mb-5 pb-lg-2" style="color: #393f81;">Are you an admin? <a href="/admin/adminlogin"
-                        style="color: #393f81;">Click Here</a></p>
+<div>
+  <section class="vh-100" style="background-color: #20315e; margin-top: -50px;">
+    <%-include('../partials/nav') %>
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-xl-10">
+          <div class="card" style="border-radius: 1rem;">
+            <div class="row g-0">
+              <div class="col-md-6 col-lg-5 d-none d-md-block">
+                <img src="../img/metro2.jpg" alt="login form" class="img-fluid h-100" style="border-radius: 1rem 0 0 1rem;" />
+              </div>
+              <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                <div class="card-body p-4 p-lg-5 text-black">
+
+                  <!-- Rest of the form code -->
+                  <form action="/user/userlogin" method="post">
+
+                    <div class="d-flex align-items-center mb-3 pb-1">
+                      <i class="fas fa-train fa-2x me-3" style="color: #ff6219;"></i>
+                      <span class="h1 fw-bold mb-0">SMetro</span>
+
                     </div>
-                  </div>
+
+                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+
+                    <div class="form-outline mb-4">
+                      <input type="text" class="form-control form-control-lg" maxlength="50" id="email" name="email"
+                        aria-describedby="emailHelp" required/>
+                      <label class="form-label" for="email">Email address</label>
+                    </div>
+
+                    <div class="form-outline mb-4">
+                      <input type="password" maxlength="23" class="form-control form-control-lg" id="password" name="password" required>
+                      <label class="form-label" for="password">Password</label>
+                    </div>
+
+                    <div class="pt-1 mb-4">
+                      <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                      <a class="small text-muted" href="/user/forgetpassword">Forgot password?</a>
+                    </div>
+                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/user/usersignup"
+                        style="color: #393f81;">Register here</a></p>
+                  </form>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Are you an admin? <a href="/admin/adminlogin"
+                      style="color: #393f81;">Click Here</a></p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </div>
+  </section>
+</div>
+
       
 
 
