--- a/Demo Frontend/muaz/admindashboard.ejs
+++ b/Demo Frontend/muaz/admindashboard.ejs
@@ -15,8 +15,7 @@
     <title>Login</title>
     <style>
         body{
-            background:#f5f5f5;
-            margin-top:20px;}
+            background:#f5f5f5;}
         
         /* ===== Career ===== */
         .career-form {
@@ -222,8 +221,6 @@
   
         body {
         width: 100%;
-        margin: 0 auto;
-        padding: 50px;
       }
       
       div.elem-group {
