modified and merged contact, terms and conditions and privacy policy

--- a/smetro/views/partials/contact.ejs
+++ b/smetro/views/partials/contact.ejs
@@ -22,7 +22,6 @@
             background-size: cover; background-position: center; margin-top: -10px;">
             <%-include('../partials/nav') %>
             
-            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Contact Info</h1>
 
             <div class="container py-5 h-100" style="max-width: 90%">
                 <div class="row d-flex justify-content-center h-100">
@@ -37,9 +36,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 offset-md-2">
-                
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h1>Contact</h1>
                                     <p>Thank you for visiting the smetro website. We value your feedback, inquiries, and suggestions. 
                                         Please use the contact information below to get in touch with us.
@@ -47,8 +45,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h3>General Inquiries:</h3>
                                     <p>For general inquiries, information about our services, or any other non-urgent matters, please reach 
                                         out to our customer service team. They are available to assist you during our regular business hours. 
@@ -61,8 +59,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h3>Lost and Found:</h3>
                                     <p>If you have lost an item during your journey on our metro rail system, please contact our Lost and Found 
                                         department. Provide detailed information about the lost item, including the date, time, and location where 
@@ -76,8 +74,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h3>Media Inquiries:</h3>
                                     <p>Members of the media seeking information, interviews, or media-related inquiries can contact our media 
                                         relations department. Please provide specific details about your request, including the deadline for response.
@@ -90,8 +88,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h3>Accessibility:</h3>
                                     <p>We are committed to providing accessible services to all passengers. If you require assistance or have any
                                         accessibility-related inquiries, please contact our Accessibility Office.
@@ -104,8 +102,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h3>Feedback and Suggestions:</h3>
                                     <p>We value your feedback and suggestions to improve our services. If you have any comments, suggestions, 
                                         or compliments, please feel free to share them with us. Your feedback helps us enhance the metro rail 
@@ -117,8 +115,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <h3>Mailing Address:</h3>
                                     <p>If you prefer to communicate via traditional mail, you can send your correspondence to our mailing 
                                         address:
@@ -132,8 +130,8 @@
                                 </div>
                             </div>
                 
-                            <div class="card">
-                                <div class="card-body">
+                             <div class="card mb-4">
+                                <div class="card-body text-justify">
                                     <p>Please note that our response time may vary depending on the nature of your inquiry. We strive to 
                                         respond to all inquiries promptly and provide the necessary assistance.<br>
                                         
