--- a/smetro/views/partials/navlogged.ejs
+++ b/smetro/views/partials/navlogged.ejs
@@ -54,18 +54,18 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav text-center justify-content-center"> <!-- Added justify-content-center class -->
             <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/user/dashboard">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="/user/profile">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/partial/contact">Contact</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/user/prevtickets">Ticket History</a>
             </li>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            
         </ul>
     </div>
 
