--- a/smetro/views/partials/nav.ejs
+++ b/smetro/views/partials/nav.ejs
@@ -13,7 +13,7 @@
         background-color: #142246d5;
     }
     .navbar-nav .nav-item.active {
-        margin-left: 28px;
+        margin-left: 90px;
     }
     .modal-header-warning {
 	color:#fff;
@@ -39,6 +39,9 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     }
+    .nav-link {
+    margin-right: 15px; /* Add spacing to the right of each link */
+}
 
 
 </style>
@@ -54,31 +57,23 @@
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
 </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Services
-            </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-        </ul>
-    </div>
+<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/partials/terms">Terms and Conditions</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/partials/contact">Contact</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/partials/privacy">Privacy Policy</a>
+        </li>
+    </ul>
+</div>
+
     
     <div class="navbar-nav">
         <a class="nav-link" href="/user/userlogin"> Log In <i class="fas fa-user"></i></a>
