--- a/smetro/views/admin/addbalance.ejs
+++ b/smetro/views/admin/addbalance.ejs
@@ -19,7 +19,7 @@
             background-size: cover; background-position: center; margin-top: -10px;">
             <%-include('../partials/navadmin') %>
             
-            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Available Tickets</h1>
+            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Add Balance</h1>
 
             <div class="container py-5 h-100" style="max-width: 90%">
                 <div class="row d-flex justify-content-center h-100">
@@ -33,7 +33,7 @@
                 <!-- Paste rest of the code -->
                 <div class="container my-5  ">
                     <div class="jumbotron">
-                        <h1 class="text-center">Add route fare</h1>
+                        <h1 class="text-center">Add Balance</h1>
                         <form action="/admin/addbalance" method="post">
                 
                             <div class="form-row">
