--- a/smetro/views/admin/addtrain.ejs
+++ b/smetro/views/admin/addtrain.ejs
@@ -21,8 +21,6 @@
     <section class="vh-1000" style="background-image: url('../img/metro4.jpg'); 
             background-size: cover; background-position: center; margin-top: -10px;">
             <%-include('../partials/navadmin') %>
-            
-            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Available Tickets</h1>
 
             <div class="container py-5 h-100" style="max-width: 90%">
                 <div class="row d-flex justify-content-center h-100">
@@ -98,7 +96,7 @@
             
                     <div class="card shadow mb-4 my-2">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-info text-center">Ticket List</h6>
+                            <h6 class="m-0 font-weight-bold text-info text-center">Available Trains</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
