--- a/smetro/views/admin/adminsignup.ejs
+++ b/smetro/views/admin/adminsignup.ejs
@@ -37,7 +37,7 @@
       
                         <div class="form-outline mb-4">
                             <label for="masterkey">Master Key</label>
-                            <input type="text" maxlength="20" class="form-control" id="masterkey" name="masterkey"
+                            <input type="password" maxlength="20" class="form-control" id="masterkey" name="masterkey"
                                 aria-describedby="emailHelp" placeholder="Not email" required>
                         </div>
 
@@ -54,7 +54,7 @@
                         </div>
                         <div class="form-outline mb-4">
                             <label for="adminemail">Email</label>
-                            <input type="email" maxlength="50" class="form-control" id="useradminemail" name="useradminemail"
+                            <input type="email" maxlength="50" class="form-control" id="adminemail" name="adminemail"
                                 ariadescribedby="emailHelp" required>
             
                         </div>
