--- a/smetro/views/admin/stuckpassengers.ejs
+++ b/smetro/views/admin/stuckpassengers.ejs
@@ -20,7 +20,7 @@
             background-size: cover; background-position: center; margin-top: -10px;">
             <%-include('../partials/navadmin') %>
             
-            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Available Tickets</h1>
+            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Stuck Passenger List</h1>
 
             <div class="container py-5 h-100" style="max-width: 90%">
                 <div class="row d-flex justify-content-center h-100">
