--- a/smetro/views/partials/navadmin.ejs
+++ b/smetro/views/partials/navadmin.ejs
@@ -53,14 +53,14 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav text-center justify-content-center"> <!-- Added justify-content-center class -->
-            <li class="nav-item active">
-                <a class="nav-link" href="/admin/admindashboard">Add Route and Fair<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/admindashboard">Add Route and Fare<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/admin/addtrain">Add Train</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/stuckpassengers">stuckpassengers</a>
+                <a class="nav-link" href="/admin/stuckpassengers">Stuck Passengers</a>
             </li>
             </li>
             <li class="nav-item">
