--- a/smetro/views/user/dashboard.ejs
+++ b/smetro/views/user/dashboard.ejs
@@ -16,7 +16,7 @@
                     <div class="left-side">
                         <div class="tabs-content">
                             <h4>Smetro</h4>
-                            <h3>Safety|Security|Punchuality</h3>
+                            <h3>Safety|Security|Puntuality</h3>
                         </div>
                     </div>
                 </div>
