--- a/smetro/views/user/showqr.ejs
+++ b/smetro/views/user/showqr.ejs
@@ -14,10 +14,24 @@
         <title>Ticket</title>
 </head>
 
-<body> 
-    
+<body>
+
+    <section class="vh-1000" style="background-image: url('../img/metro4.jpg'); 
+    background-size: cover; background-position: center; margin-top: -10px;">
     <%-include('../partials/navlogged') %>
-    <div class="jumbotron" style="background-image: url('../img/metro4.jpg');background-repeat: no-repeat; background-size: cover; padding: 20px;">
+    
+    <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Your Ticket</h1>
+
+    <div class="container py-5 h-100" style="max-width: 90%">
+        <div class="row d-flex justify-content-center h-100">
+        <div class="col col-xl-10">
+
+
+
+
+
+
+        <!-- Paste rest of the code -->
         <div class="card shadow mb-4 my-2 mx-auto" style="max-width: 800px;">
             <div class="card-header py-3">
                 <h3 class="p-3 mb-2 bg-success text-white text-center">Welcome to SMetro. Here is your ticket.</h3><br>
@@ -65,7 +79,23 @@
                 <a class="btn btn-success" href="/user/scanqr"><h7>Scan QR Code</h7></a>
             </div>
         </div>
+        <!-- Paste rest of the code -->
+
+
+
+
+
+
+
+
+        
+      </div>
     </div>
+  </div>
+</section>
+</div>
+
+    
     
     <%-include('../partials/footer') %>
     
