--- a/smetro/views/user/updatepassword.ejs
+++ b/smetro/views/user/updatepassword.ejs
@@ -249,7 +249,7 @@
             
                             <div class="form-group">
                                 <label for="newpassword">Password: </label>
-                                <input type="text" maxlength="23" class="form-control" id="newpassword" name="newpassword" required>
+                                <input type="password" maxlength="23" class="form-control" id="newpassword" name="newpassword" required>
                 
                                 <input type="hidden" maxlength="20" class="form-control" id="femail" name="femail" value=<%=femail%>
                                     aria-describedby="emailHelp" required>
