--- a/smetro/views/partials/navlogged.ejs
+++ b/smetro/views/partials/navlogged.ejs
@@ -39,6 +39,9 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     }
+    .nav-link {
+    margin-right: 15px; /* Add spacing to the right of each link */
+}
 </style>
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
@@ -51,6 +54,8 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+
+    
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav text-center justify-content-center"> <!-- Added justify-content-center class -->
             <li class="nav-item active">
@@ -60,18 +65,16 @@
                 <a class="nav-link" href="/user/profile">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/partial/contact">Contact</a>
+                <a class="nav-link" href="/user/prevtickets">Ticket History</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/user/prevtickets">Ticket History</a>
+                <a class="nav-link" href="/user/tickethistory">Eligible Tickets</a>
             </li>
             </li>
         </ul>
     </div>
 
-    <div class="navbar-nav">
-        <a class="nav-link" href="/user/tickethistory"> Eligible Tickets <i class="fas fa-user" style="font-size:15px"></i></a>
-    </div>
+    
     <div class="navbar-nav">
         <a class="nav-link" href="/user/scanqr"> Scan Ticket <i class="fas fa-camera" style="font-size:15px"></i></a>
     </div>
