--- a/smetro/views/test.ejs
+++ b/smetro/views/test.ejs
@@ -1,178 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <meta name="description" content="A sample Bootstrap-based privacy web page for use with websites that use Google Analytics">
-    
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    
-    <!-- Customise Bootstrap for practical grid layouts -->
-    <link rel="stylesheet" href="assets/css/bootstrap-custom.css"> 
-    <%-include('../partials/header') %>
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>Admin Register</title>
 </head>
 
-
 <body>
+    <%-include('../partials/nav') %>
+    
 
-    <section class="vh-1000" style="background-image: url('../img/metro4.jpg'); 
-            background-size: cover; background-position: center; margin-top: -10px;">
-            <%-include('../partials/nav') %>
+    <div class="container my-4">
+        <h3 class="text-center">An email would be send to your provided email <%=adminemail%>.
+            Please provide the otp for sign up.</h3>
+        <form action="/admin/adminregister" method="post">
             
-            <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Contact Info</h1>
+            <div class="form-group">
+                <label for="adminvarcode">Varification Code</label>
+                <input type="text" maxlength="23" class="form-control" id="adminotp" name="adminvarcode" required>
 
-            <div class="container py-5 h-100" style="max-width: 90%">
-                <div class="row d-flex justify-content-center h-100">
-                <div class="col col-xl-10">
-
-
-
-
-
-
-                <!-- Paste rest of the code -->
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 offset-md-2">
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h1>Contact</h1>
-                                    <p>Thank you for visiting the smetro website. We value your feedback, inquiries, and suggestions. 
-                                        Please use the contact information below to get in touch with us.
-                                    </p>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h3>General Inquiries:</h3>
-                                    <p>For general inquiries, information about our services, or any other non-urgent matters, please reach 
-                                        out to our customer service team. They are available to assist you during our regular business hours. 
-                                    </p>
-                                    <h5>
-                                        Customer Service Email: customer@smetro.com<br>
-                                        Customer Service Phone: 01713205060<br>
-                                    </h5>
-                                    <p>Business Hours: Monday to Friday, 9:00 AM to 5:00 PM</p>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h3>Lost and Found:</h3>
-                                    <p>If you have lost an item during your journey on our metro rail system, please contact our Lost and Found 
-                                        department. Provide detailed information about the lost item, including the date, time, and location where 
-                                        it was lost, as well as a description of the item.
-                                    </p>
-                                    <h5>
-                                        Lost and Found Email: lostandfound@smetro.com<br>
-                                        Lost and Found Phone: 01713205070<br>
-                                    </h5>
-                                    <p>Lost and Found Hours: Monday to Friday, 9:00 AM to 5:00 PM</p>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h3>Media Inquiries:</h3>
-                                    <p>Members of the media seeking information, interviews, or media-related inquiries can contact our media 
-                                        relations department. Please provide specific details about your request, including the deadline for response.
-                                    </p>
-                                    <h5>
-                                        Media Relations Email: media@smetro.com<br>
-                                        Media Relations Phone: 01713205080<br>
-                                    </h5>
-                                    <p>Media Relations Office Hours: Monday to Friday, 9:00 AM to 5:00 PM</p>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h3>Accessibility:</h3>
-                                    <p>We are committed to providing accessible services to all passengers. If you require assistance or have any
-                                        accessibility-related inquiries, please contact our Accessibility Office.
-                                    </p>
-                                    <h5>
-                                        Accessibility Office Email: accessibility@smetro.com<br>
-                                        Accessibility Office Phone: 01713205090<br>
-                                    </h5>
-                                    <p>Accessibility Office Hours: Monday to Friday, 9:00 AM to 5:00 PM</p>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h3>Feedback and Suggestions:</h3>
-                                    <p>We value your feedback and suggestions to improve our services. If you have any comments, suggestions, 
-                                        or compliments, please feel free to share them with us. Your feedback helps us enhance the metro rail 
-                                        experience for all passengers.
-                                    </p>
-                                    <h5>
-                                        Feedback Email: feedback@smetro.com<br>
-                                    </h5>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <h3>Mailing Address:</h3>
-                                    <p>If you prefer to communicate via traditional mail, you can send your correspondence to our mailing 
-                                        address:
-                                    </p>
-                                    <h5>
-                                        Smetro Head Quarter<br>
-                                        12/2 Elephant Road<br>
-                                        Taltola, Arambag<br>
-                                        Dhaka<br>
-                                    </h5>
-                                </div>
-                            </div>
-                
-                            <div class="card">
-                                <div class="card-body">
-                                    <p>Please note that our response time may vary depending on the nature of your inquiry. We strive to 
-                                        respond to all inquiries promptly and provide the necessary assistance.<br>
-                                        
-                                        Thank you for choosing smetro. We appreciate your support and look forward to serving you.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Paste rest of the code -->
-
-
-
-
-
-
-
-
-                
-              </div>
+                <input type="hidden" maxlength="20" class="form-control" id="adminname" name="adminname" value=<%=adminname%>
+                    aria-describedby="emailHelp" placeholder="Not email" required>
+                <input type="hidden" maxlength="20" class="form-control" id="adminnid" name="adminnid" value=<%=adminnid%>
+                    aria-describedby="emailHelp" placeholder="" required>
+                <input type="hidden" maxlength="50" class="form-control" id="adminemail" name="adminemail" value=<%=adminemail%>
+                    aria-describedby="emailHelp" required>
+                <input type="hidden" class="form-control" id="phone" name="adminphone" value=<%=adminphone%>
+                    maxlength="11" pattern="[0-9]{11}" placeholder="01XXXXXXXXX(Use only digits)" required>
+                <input type="hidden" maxlength="23" class="form-control" id="adminpassword" name="adminpassword" 
+                value=<%=adminpassword%> required>
+                <input type="hidden" maxlength="23" class="form-control" id="adminotp" name="adminotp" 
+                value=<%=adminotp%> required>
             </div>
-          </div>
-        </section>
 
-    
-    
-    <%-include('../partials/footer') %>
+            <button type="submit" class="btn btn-primary">SignUp</button><br><br>
+        </form>
+    </div>
 
-
- 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
-
-    
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
