fixed not enough balance bug

--- a/smetro/views/user/bookticket.ejs
+++ b/smetro/views/user/bookticket.ejs
@@ -295,6 +295,9 @@
                                                                 <input type="hidden" maxlength="50" class="form-control" id="trainid"
                                                                     name="trainid" aria-describedby="emailHelp" value=<%=train.trainid
                                                                     %> required>
+                                                                <input type="hidden" maxlength="50" class="form-control" id="fareamount"
+                                                                    name="fareamount" aria-describedby="emailHelp" value=<%=train.amount
+                                                                    %> required>
                                                             <button type="submit" class="btn d-block w-100 d-sm-inline-block btn-success" style="border-radius: 50px;">Buy Ticket</button>
                                                             </form>
                                                         </div>
@@ -314,7 +317,7 @@
 
 
 
-
+                
                 
               </div>
             </div>
