--- a/smetro/views/user/doorSystem.ejs
+++ b/smetro/views/user/doorSystem.ejs
@@ -50,7 +50,7 @@
                 delete error;
             } %>
   
-          <a class="btn btn-outline-light btn-lg m-2" href="/user/dashboard" target="_blank" role="button">Return to dashboard</a>
+          <a class="btn btn-outline-light btn-lg m-2" href="/user/dashboard" role="button">Return to dashboard</a>
         </div>
       </div>
     </div>
