Fixed some bugs

--- a/smetro/views/user/register.ejs
+++ b/smetro/views/user/register.ejs
@@ -233,7 +233,7 @@
     <!-- <section class="vh-100" style=" background-color: #20315e; margin-top: -10px"> -->
         <section class="vh-100" style="background-image: url('../img/metro4.jpg'); 
             background-size: cover; background-position: center; margin-top: -10px;">
-            <%-include('../partials/navlogged') %>
+            <%-include('../partials/nav') %>
             
             <h1 class="mb-3 text-white text-center" style="margin-top: 50px;">Verify Ticket</h1><br>
 
